force-app/main/default/objects/inspire1__Project_Template_Mapping__c/inspire1__Project_Template_Mapping__c.object-meta.xml
<CustomObject>
    <description>Inspire Planner - Mappings to defined project templates for products.  Used by template stitching feature.</description>
    <label>Project Template Mapping</label>
    <nameField>
        <displayFormat>PTM-{00000}</displayFormat>
        <label>Mapping No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Template Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>