force-app/main/default/objects/inspire1__Project_Template_Mapping__c/fields/inspire1__Description__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Description__c</fullName>
    <description>Description of mapping.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>