force-app/main/default/objects/inspire1__Project_Template_Mapping__c/fields/inspire1__Product__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product that project template is related to.</description>
    <inlineHelpText>Product that project template is related to.</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Project Template Mappings</relationshipLabel>
    <relationshipName>Project_Template_Mappings1</relationshipName>
    <type>Lookup</type>
</CustomField>