force-app/main/default/objects/inspire1__Project_Template_Mapping__c/fields/inspire1__Project_Template__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Project_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Project template that is related to Opportunity</description>
    <label>Project Template</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You must select a project template.</errorMessage>
        <filterItems>
            <field>inspire1__Project__c.inspire1__Template__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>inspire1__Project__c</referenceTo>
    <relationshipLabel>Project Template Mappings</relationshipLabel>
    <relationshipName>Project_Template_Mappings1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>