force-app/main/default/objects/inspire1__Project_Template_Mapping__c/listViews/inspire1__All.listView-meta.xml
<ListView>
    <fullName>inspire1__All</fullName>
    <columns>NAME</columns>
    <columns>inspire1__Project_Template__c</columns>
    <columns>inspire1__Product__c</columns>
    <columns>inspire1__Description__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>